# ros-rtsp-camera

rtsp_camera/: CMakeLists.txt  package.xml
rtsp_camera/env-hooks/: 25.rtsp-camera.sh.em
rtsp_camera/include/rtsp_camera/: rtsp_camera.hpp
rtsp_camera/launch/: rtsp_camera.launch
rtsp_camera/src/: main.cpp  rtsp_camera.cpp
