<?xml version="1.0"?>
<package>
  <name>rtsp_camera</name>
  <version>1.0.0</version>
  <description>
    RTSP camera relay node converts rtsp camera stream from ip camera to ros image message
  </description>

  <maintainer email="rgovostes@whoi.edu">Ryan Govostes</maintainer>

  <author email="dwlee@yujinrobot.com">Dongwook Lee</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gstreamer1.0-libav</run_depend>
  <run_depend>gstreamer1.0-rtsp</run_depend>
</package>
